# wf_codex

./: Cargo.toml  README.md
.github/workflows/: Docs.yml  release.yml  rust.yml
docs/: build_and_release.md  cli.md  index.md  model.md  outputs.md  usage.md
examples/: sample_allele_trajectories.csv
src/: main.rs
