[package]
name = "wf_codex"
version = "0.1.1"
edition = "2024"

[dependencies]
clap = { version = "4", features = ["derive"] }
rand = "0.8"
rand_distr = "0.4"

[features]
# Enable heavier, longer-running stochastic tests.
heavy-tests = []

[profile.release]
# Maximize runtime performance for release artifacts
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
# Remove debug symbols from final binaries (use debug=0 as a fallback on older toolchains)
strip = "symbols"
debug = 0
